--- a/events/CaloCell/CMakeLists.txt
+++ b/events/CaloCell/CMakeLists.txt
@@ -1,26 +1,14 @@
 
+file(GLOB SOURCES Root/*.cxx )
+file(GLOB_RECURSE HEADERS CaloCell/*.h)
 
+include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core)
 
-
-#include_directories(${CMAKE_SOURCE_DIR}/source/global/HEPGeometry/include)
-
-file(GLOB sources 
-     ${PROJECT_SOURCE_DIR}/src/*.cxx
-  )
-
-file(GLOB headers 
-     ${PROJECT_SOURCE_DIR}/include/*.h
-     )
-
-
-
-#----------------------------------------------------------------------------
-# Add the executable, and link it to the Geant4 libraries
-#add_executable(propagator scripts/propagator.cc ${sources} ${headers})
-#target_link_libraries(propagator ${Geant4_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES} ${ROOT_LIBRARIES} )
-
-
-
+ROOT_GENERATE_DICTIONARY(CaloCellDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/Root/LinkDef.h  MODULE CaloCell)
+                                      
+add_library(CaloCell  OBJECT ${SOURCES} CaloCellDict.cxx)
+install(FILES ${HEADERS}  DESTINATION CaloCell)
 
 
 
