fix some things

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,18 +54,19 @@ add_subdirectory( core )
 add_subdirectory( reader )
 add_subdirectory( events/CaloCluster )
 add_subdirectory( events/CaloCell )
+add_subdirectory( events/EventInfo )
 
 
-add_library(atropos SHARED
+add_library(minerva SHARED
   $<TARGET_OBJECTS:core>
   $<TARGET_OBJECTS:reader>
   $<TARGET_OBJECTS:CaloCluster>
   $<TARGET_OBJECTS:CaloCell>
+  $<TARGET_OBJECTS:EventInfo>
 )
 
 
-target_link_Libraries(atropos ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES} ${Boost_PYTHON_LIBRARIES} ${PYTHON_LIBRARIES} 
+target_link_Libraries(minerva ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES} ${Boost_PYTHON_LIBRARIES} ${PYTHON_LIBRARIES} 
   ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Geant4_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES} ${ROOT_LIBRARIES} )
-#----------------------------------------------------------------------------
 
 
