--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -5,6 +5,7 @@ file(GLOB_RECURSE HEADERS core/*.h core/geant/*.h )
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../events/CaloCell)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../events/EventInfo)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../reader)
 
 
