add shower shapes

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/gaugi"]
 	path = external/gaugi
 	url = https://github.com/jodafons/Gaugi.git
+[submodule "external/cpk"]
+	path = external/cpk
+	url = https://gitlab.cern.ch/ginaciog/calopulsekit.git
