--- a/events/EventInfo/CMakeLists.txt
+++ b/events/EventInfo/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOU
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CaloCell)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CaloCluster)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../Truth)
 
 ROOT_GENERATE_DICTIONARY(EventInfoDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/Root/LinkDef.h  MODULE EventInfo)
                                       
