--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/jodafons/Gaugi.git
 [submodule "external/cpk"]
 	path = external/cpk
-	url = https://gitlab.cern.ch/ginaciog/calopulsekit.git
+	url = https://github.com/jodafons/cpk.git
