--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0)
-project(castor)
+project(lorenzetti)
 
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -DDROP_CGAL")
@@ -55,26 +55,24 @@ add_subdirectory( external/cpk )
 add_subdirectory( events/CaloCell )
 add_subdirectory( events/CaloCluster )
 add_subdirectory( events/EventInfo )
-add_subdirectory( events/Truth )
+add_subdirectory( events/TruthParticle )
 
 add_subdirectory( core )
-add_subdirectory( reader )
 add_subdirectory( reco/CaloRec )
 
 
-add_library(castor SHARED
-  $<TARGET_OBJECTS:reader>
+add_library(lorenzetti SHARED
   $<TARGET_OBJECTS:CaloCell>
   $<TARGET_OBJECTS:CaloCluster>
   $<TARGET_OBJECTS:EventInfo>
-  $<TARGET_OBJECTS:Truth>
+  $<TARGET_OBJECTS:TruthParticle>
   $<TARGET_OBJECTS:core>
   $<TARGET_OBJECTS:CaloRec>
   $<TARGET_OBJECTS:cpk>
 )
 
 
-target_link_Libraries(castor ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES} ${Boost_PYTHON_LIBRARIES} ${PYTHON_LIBRARIES} 
+target_link_Libraries(lorenzetti ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES} ${Boost_PYTHON_LIBRARIES} ${PYTHON_LIBRARIES} 
   ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Geant4_LIBRARIES} ${HEPMC_LIBRARIES} ${HEPMC_FIO_LIBRARIES} ${ROOT_LIBRARIES} )
 
 
