--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,13 +1,12 @@
 
-file(GLOB SOURCES Root/*.cxx Root/geant/*.cxx )
-file(GLOB_RECURSE HEADERS core/*.h core/geant/*.h )
+file(GLOB SOURCES Root/*.cxx Root/geant/*.cxx Root/reader/*.cxx)
+file(GLOB_RECURSE HEADERS core/*.h core/geant/*.h core/reader/*.h)
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../events/CaloCell)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../events/EventInfo)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../events/Truth)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../reader)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../events/TruthParticle)
 
 
 
