add componenet accumulator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,8 @@ link_directories( ${Boost_LIBRARY_DIR} )
 
 #add_subdirectory( external/cpk )
 #add_subdirectory( events/CaloCell )
-#add_subdirectory( events/CaloCluster )
-#add_subdirectory( events/EventInfo )
+add_subdirectory( events/CaloCluster )
+add_subdirectory( events/EventInfo )
 #add_subdirectory( events/TruthParticle )
 
 add_subdirectory( core/GaugiKernel )
@@ -64,8 +64,8 @@ add_subdirectory( core/G4Kernel )
 
 add_library(lorenzetti SHARED
   #$<TARGET_OBJECTS:CaloCell>
-  #$<TARGET_OBJECTS:CaloCluster>
-  #$<TARGET_OBJECTS:EventInfo>
+  $<TARGET_OBJECTS:CaloCluster>
+  $<TARGET_OBJECTS:EventInfo>
   #$<TARGET_OBJECTS:TruthParticle>
   $<TARGET_OBJECTS:GaugiKernel>
   $<TARGET_OBJECTS:G4Kernel>
