--- a/core/G4Kernel/CMakeLists.txt
+++ b/core/G4Kernel/CMakeLists.txt
@@ -11,7 +11,7 @@ install(FILES ${HEADERS}  DESTINATION G4Kernel)
 
 
 
-
+gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python G4Kernel)
 
 
 
