--- a/events/CaloCluster/CMakeLists.txt
+++ b/events/CaloCluster/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/GaugiKernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/G4Kernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../CaloCell)
 
-ROOT_GENERATE_DICTIONARY(CaloClusterDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/Root/LinkDef.h  MODULE CaloCluster)
+ROOT_GENERATE_DICTIONARY(CaloClusterDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloCluster)
                                       
 add_library(CaloCluster  OBJECT ${SOURCES} CaloClusterDict.cxx)
 install(FILES ${HEADERS}  DESTINATION CaloCluster)
