--- a/events/CaloCell/CMakeLists.txt
+++ b/events/CaloCell/CMakeLists.txt
@@ -1,11 +1,11 @@
 
-file(GLOB SOURCES Root/*.cxx )
+file(GLOB SOURCES src/*.cxx )
 file(GLOB_RECURSE HEADERS CaloCell/*.h)
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/GaugiKernel)
 
-ROOT_GENERATE_DICTIONARY(CaloCellDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/Root/LinkDef.h  MODULE CaloCell)
+ROOT_GENERATE_DICTIONARY(CaloCellDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloCell)
                                       
 add_library(CaloCell  OBJECT ${SOURCES} CaloCellDict.cxx)
 install(FILES ${HEADERS}  DESTINATION CaloCell)
