--- a/core/G4Kernel/CMakeLists.txt
+++ b/core/G4Kernel/CMakeLists.txt
@@ -3,6 +3,7 @@ file(GLOB SOURCES src/*.cxx)
 file(GLOB_RECURSE HEADERS G4Kernel/*.h )
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../GaugiKernel)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/EventInfo)
 
 ROOT_GENERATE_DICTIONARY(G4KernelDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE G4Kernel)
                                       
