--- a/generator/PythiaGenerator/CMakeLists.txt
+++ b/generator/PythiaGenerator/CMakeLists.txt
@@ -1,11 +1,13 @@
 
 file(GLOB SOURCES src/*.cxx)
-file(GLOB_RECURSE HEADERS src/EventGenerator.h src/ParticleFilter.h Zee.h)
+file(GLOB_RECURSE HEADERS src/EventGenerator.h src/ParticleFilter.h src/Zee.h src/JF17.h src/EventReader.h)
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/GaugiKernel)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/G4Kernel)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/EventInfo)
 
-
+# included by hand, should be fixed for future
 include_directories( /Users/jodafons/.bin/fastjet-3.3.3/include)
 include_directories( /Users/jodafons/.bin/pythia8244/include)
 
