--- a/generator/PythiaGenerator/CMakeLists.txt
+++ b/generator/PythiaGenerator/CMakeLists.txt
@@ -8,8 +8,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/G4Kernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/EventInfo)
 
 # included by hand, should be fixed for future
-include_directories( /Users/jodafons/.bin/fastjet-3.3.3/include)
-include_directories( /Users/jodafons/.bin/pythia8244/include)
+include_directories( ${FASTJET_INCLUDE_DIRS} )
+include_directories( ${PYTHIA8_INCLUDE_DIRS} )
 
 ROOT_GENERATE_DICTIONARY(PythiaGeneratorDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE PythiaGenerator)
                                       
