--- a/reconstruction/CaloNtuple/CMakeLists.txt
+++ b/reconstruction/CaloNtuple/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 file(GLOB SOURCES src/*.cxx)
-file(GLOB_RECURSE HEADERS src/EventNtupleMaker.h )
+file(GLOB_RECURSE HEADERS src/CaloNtupleMaker.h )
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCluster)
@@ -12,13 +12,13 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/GaugiKernel)
 
 
 
-ROOT_GENERATE_DICTIONARY(EventNtupleDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE EventNtuple)
+ROOT_GENERATE_DICTIONARY(CaloNtupleDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloNtuple)
                                       
-add_library(EventNtuple  OBJECT ${SOURCES} EventNtupleDict.cxx)
-install(FILES ${HEADERS}  DESTINATION EventNtuple)
+add_library(CaloNtuple  OBJECT ${SOURCES} CaloNtupleDict.cxx)
+install(FILES ${HEADERS}  DESTINATION CaloNtuple)
 
 
-gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python EventNtuple)
+gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python CaloNtuple)
 
 
 
