--- a/reconstruction/CaloRec/CMakeLists.txt
+++ b/reconstruction/CaloRec/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCluster)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCell)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/EventInfo)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/TruthParticle)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloRings)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/GaugiKernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/G4Kernel)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../external/cpk/include)
