fix gaugi commit

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/cpk"]
 	path = external/cpk
 	url = https://github.com/jodafons/cpk.git
+[submodule "external/gaugi"]
+	path = external/gaugi
+	url = https://github.com/jodafons/Gaugi.git
