lorenzett: it is possble to simulate differents detectors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ add_subdirectory( events/CaloRings )
 add_subdirectory( reconstruction/CaloRec )
 add_subdirectory( reconstruction/CaloRingerBuilder )
 add_subdirectory( generator/PythiaGenerator )
+add_subdirectory( geometry/DetectorATLASModel )
 
 
 add_library(lorenzett SHARED
@@ -83,6 +84,7 @@ add_library(lorenzett SHARED
   $<TARGET_OBJECTS:CaloRec>
   $<TARGET_OBJECTS:CaloRingerBuilder>
   $<TARGET_OBJECTS:PythiaGenerator>
+  $<TARGET_OBJECTS:DetectorATLASModel>
 )
 
 message( STATUS ${FASTJET_LIBRARIES} )
