Initial working version of sdumont docker image

--- a/docker/sdumont/Dockerfile
+++ b/docker/sdumont/Dockerfile
@@ -1,2 +1,7 @@
 FROM gabrielmilan/lorenzett:latest
 
+LABEL maintainer "Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"
+
+COPY lorenzett_run.sh /lorenzett_run.sh
+
+ENTRYPOINT ["/lorenzett_run.sh"]
