--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "external/cpk"]
 	path = external/cpk
 	url = https://github.com/jodafons/cpk.git
-	ignore = dirty
+	ignore = all
 [submodule "external/gaugi"]
 	path = external/gaugi
 	url = https://github.com/jodafons/Gaugi.git
-	ignore = dirty
+	ignore = all
