update cluster lps docker image

--- a/docker/base/Makefile
+++ b/docker/base/Makefile
@@ -1,6 +1,6 @@
 build:
-	docker build --compress --no-cache -t lorenzett/lorenzett:latest .
-	docker build --compress  -t lorenzett/lorenzett:base .
+	docker build --compress -t lorenzett/lorenzett:latest .
+	docker build --compress -t lorenzett/lorenzett:base .
 push:
 	docker push lorenzett/lorenzett:latest
 	docker push lorenzett/lorenzett:base
