--- a/docker/lps/Dockerfile
+++ b/docker/lps/Dockerfile
@@ -2,5 +2,6 @@ FROM lorenzett/lorenzett:base
 
 LABEL maintainer "Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"
 
-COPY parser.py /parser.py
+#COPY setup_envs.sh /setup_envs.sh
+COPY run_lorenzett.py /run_lorenzett.py
 
