add event reader python layer just like we have in the prometheus framework

--- a/core/GaugiKernel/CMakeLists.txt
+++ b/core/GaugiKernel/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 file(GLOB SOURCES src/*.cxx)
-file(GLOB_RECURSE HEADERS GaugiKernel/*.h )
+file(GLOB_RECURSE HEADERS GaugiKernel/*.h GaugiKernel/versions/*.h )
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 
 ROOT_GENERATE_DICTIONARY(GaugiKernelDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE GaugiKernel)
@@ -8,7 +8,7 @@ ROOT_GENERATE_DICTIONARY(GaugiKernelDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOUR
 add_library(GaugiKernel  OBJECT ${SOURCES} GaugiKernelDict.cxx)
 install(FILES ${HEADERS}  DESTINATION GaugiKernel)
 
-
+gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python GaugiKernel)
 
 
 
