--- a/events/CaloCell/CMakeLists.txt
+++ b/events/CaloCell/CMakeLists.txt
@@ -12,6 +12,9 @@ install(FILES ${HEADERS}  DESTINATION CaloCell)
 
 
 
+gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python CaloCell)
+
+
 
 
 
