add pythia8 separeated kernel for generator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ link_directories( ${Boost_LIBRARY_DIR} )
 
 add_subdirectory( core/GaugiKernel )
 add_subdirectory( core/G4Kernel )
+add_subdirectory( core/P8Kernel )
 add_subdirectory( external/cpk )
 add_subdirectory( events/CaloCell )
 add_subdirectory( events/CaloCluster )
@@ -68,13 +69,14 @@ add_subdirectory( events/TruthParticle )
 add_subdirectory( events/CaloRings )
 add_subdirectory( reconstruction/CaloRec )
 add_subdirectory( reconstruction/CaloRingerBuilder )
-add_subdirectory( generator/PythiaGenerator )
+#add_subdirectory( generator/PythiaGenerator )
 add_subdirectory( geometry/DetectorATLASModel )
 
 
 add_library(lorenzett SHARED
   $<TARGET_OBJECTS:GaugiKernel>
   $<TARGET_OBJECTS:G4Kernel>
+  $<TARGET_OBJECTS:P8Kernel>
   $<TARGET_OBJECTS:cpk>
   $<TARGET_OBJECTS:CaloCell>
   $<TARGET_OBJECTS:CaloCluster>
@@ -83,7 +85,7 @@ add_library(lorenzett SHARED
   $<TARGET_OBJECTS:CaloRings>
   $<TARGET_OBJECTS:CaloRec>
   $<TARGET_OBJECTS:CaloRingerBuilder>
-  $<TARGET_OBJECTS:PythiaGenerator>
+  #$<TARGET_OBJECTS:PythiaGenerator>
   $<TARGET_OBJECTS:DetectorATLASModel>
 )
 
