add Zee electron boosted generator

--- a/generator/PythiaGenerator/CMakeLists.txt
+++ b/generator/PythiaGenerator/CMakeLists.txt
@@ -5,6 +5,7 @@ file(GLOB_RECURSE HEADERS src/Pileup.h
                           src/JF17.h
                           src/ParticleGun.h
                           src/FixedRegion.h
+                          src/BoostedEvents.h
                           )
 
 
