--- a/docker/base/Makefile
+++ b/docker/base/Makefile
@@ -1,6 +1,6 @@
 build:
-	docker build --compress -t lorenzetti/lorenzetti:latest .
-	docker build --compress -t lorenzetti/lorenzetti:base .
+	docker build --network host --compress -t lorenzetti/lorenzetti:latest .
+	docker build --network host --compress -t lorenzetti/lorenzetti:base .
 push:
 	docker push lorenzetti/lorenzetti:latest
 	docker push lorenzetti/lorenzetti:base
