modify image to remove the geant hack

--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -65,7 +65,7 @@ ENV PYTHONPATH "/opt/root_cern/build/lib:$PYTHONPATH"
 
 # Install Geant4
 RUN apt-get install -y libxerces-c-dev
-RUN ls
+RUN ls -lisah
 RUN CPU_N=$(grep -c ^processor /proc/cpuinfo) && ls && cd /opt && git clone https://github.com/jodafons/geant4.git && cd geant4 && mkdir buildthis && cd buildthis && cmake -DGEANT4_INSTALL_DATA=ON \
  -DGEANT4_BUILD_MULTITHREADED=ON -DGEANT4_USE_SYSTEM_ZLIB=ON -DGEANT4_USE_QT=ON -DGEANT4_USE_GDML=ON -DGEANT4_BUILD_MUONIC_ATOMS_IN_USE=ON .. && make -j$CPU_N && \
 cp ../scripts/geant4_10.5.1.sh geant4.sh && source geant4.sh
