New: end-cap and electronic noise per layer Full list of new features: - Added ATLAS-like EMEC and HEC material; - Added electronic noise per layer based on ATLAS TDR; - New script for computing the ATLAS-like granularity going up to |eta|<3.2. Bug fix: - Visualization on multi-thread geant using new Xquartz; - Visualization on single-thread geant; - Fixed Tile barrel and extended barrel z positions; - Possible pre-sampler fix (positioning of previous PS was wrong) Missing: - Test new granularity; - Add python configuration for new layers; - Limit cells volume on zmin and zmax; - If pre-sampler is now working, end-cap pre-sampler is missing; - Forward calorimeter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 # Set by hand pythia and fastjet
 set( FASTJET_INCLUDE_DIRS $ENV{FASTJET_INCLUDE})
 set( PYTHIA8_INCLUDE_DIRS $ENV{PYTHIA8_INCLUDE})
+set( HEPMC_INCLUDE_DIRS $ENV{HEPMC_INCLUDE})
 file(GLOB FASTJET_LIBRARIES $ENV{FASTJET_LIBRARIES}/*.dylib $ENV{FASTJET_LIBRARIES}/*.so)
 file(GLOB PYTHIA8_LIBRARIES $ENV{PYTHIA8_LIBRARIES}/*.a $ENV{PYTHIA8_LIBRARIES}/*.so)
 
