Added LLPGun; Fixed electronic noise per layer

--- a/generator/PythiaGenerator/CMakeLists.txt
+++ b/generator/PythiaGenerator/CMakeLists.txt
@@ -4,6 +4,7 @@ file(GLOB_RECURSE HEADERS src/Pileup.h
                           src/Zee.h
                           src/JF17.h
                           src/ParticleGun.h
+                          src/LLPGun.h
                           src/FixedRegion.h
                           src/BoostedEvents.h
                           )
