extend all limits to the endcap (etaMax = 3.2)

--- a/core/GaugiKernel/CMakeLists.txt
+++ b/core/GaugiKernel/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 file(GLOB SOURCES src/*.cxx)
-file(GLOB_RECURSE HEADERS GaugiKernel/*.h GaugiKernel/versions/*.h )
+file(GLOB_RECURSE HEADERS GaugiKernel/*.h )
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 
 ROOT_GENERATE_DICTIONARY(GaugiKernelDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE GaugiKernel)
