reshape somethings into the configuration and reconstruction

--- a/events/CaloCell/CMakeLists.txt
+++ b/events/CaloCell/CMakeLists.txt
@@ -1,10 +1,9 @@
 
-file(GLOB SOURCES src/*.cxx )
-file(GLOB_RECURSE HEADERS CaloCell/*.h)
+file(GLOB SOURCES src/*.cxx src/helper/*.cxx )
+file(GLOB_RECURSE HEADERS CaloCell/*.h CaloCell/helper/*.h)
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../core/GaugiKernel)
-
 ROOT_GENERATE_DICTIONARY(CaloCellDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloCell)
                                       
 add_library(CaloCell  OBJECT ${SOURCES} CaloCellDict.cxx)
