--- a/reconstruction/RootStreamBuilder/CMakeLists.txt
+++ b/reconstruction/RootStreamBuilder/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 file(GLOB SOURCES src/*.cxx)
-file(GLOB_RECURSE HEADERS src/CaloNtupleMaker.h src/RawNtupleMaker.h)
+file(GLOB_RECURSE HEADERS src/RootStreamMaker.h )
 
 include_directories(${CMAKE_SOURCE_DIR} ${ROOT_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../events/CaloCluster)
@@ -14,13 +14,13 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../external/cpk/include)
 
 
 
-ROOT_GENERATE_DICTIONARY(CaloNtupleBuilderDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE CaloNtupleBuilder)
+ROOT_GENERATE_DICTIONARY(RootStreamBuilderDict ${HEADERS} LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/LinkDef.h  MODULE RootStreamBuilder)
 
-add_library(CaloNtupleBuilder  OBJECT ${SOURCES} CaloNtupleBuilderDict.cxx)
-install(FILES ${HEADERS}  DESTINATION CaloNtupleBuilder)
+add_library(RootStreamBuilder  OBJECT ${SOURCES} RootStreamBuilderDict.cxx)
+install(FILES ${HEADERS}  DESTINATION RootStreamBuilder)
 
 
-gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python CaloNtupleBuilder)
+gaugi_install_python_modules( ${CMAKE_CURRENT_SOURCE_DIR}/python RootStreamBuilder)
 
 
 
